--- a/pyspark/3.5.1/Dockerfile
+++ b/pyspark/3.5.1/Dockerfile
@@ -9,6 +9,7 @@ RUN apt-get update && apt-get install -y \
     python-is-python3 \
     python3-pip \
     default-jre \
+    curl \
     python3-venv \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
@@ -16,7 +17,13 @@ RUN apt-get update && apt-get install -y \
 # Create a virtual environment and install Python packages
 RUN python3 -m venv /opt/venv \
     && /opt/venv/bin/pip install --upgrade pip \
-    && /opt/venv/bin/pip install pyspark==${PYSPARK_VERSION} glow.py dataclasses
+    && /opt/venv/bin/pip install pyspark==${PYSPARK_VERSION} glow.py dataclasses setuptools
+
+# Download Spark jars
+RUN mkdir -p /opt/spark/jars && cd /opt/spark/jars \
+    && curl -O https://repo1.maven.org/maven2/org/apache/hadoop/hadoop-aws/3.3.4/hadoop-aws-3.3.4.jar \
+    && curl -O https://repo1.maven.org/maven2/io/delta/delta-spark_2.12/3.1.0/delta-spark_2.12-3.1.0.jar \
+    && curl -O https://repo1.maven.org/maven2/io/projectglow/glow-spark3_2.12/2.0.0/glow-spark3_2.12-2.0.0.jar
 
 # Set the PATH to use the virtual environment
 ENV PATH="/opt/venv/bin:$PATH"
